# easycatering

./: .env.example  .gitignore  ANALYSE_DUPLIKATER_UBRUKTE_TABELLER.md  CHANGELOG.md  CLAUDE.md  COOLIFY_DEPLOYMENT.md  DEPLOYMENT.md  DOCKER_COMPOSE_TEST_RESULTS.md  GRAPHQL_REPORTS_SETUP.md  HOW_TO_BUILD_NEW_REPORT.md  INSTALL_DEPENDENCIES.md  ISSUES.md  README.md  STATUS.md  WORKFLOW_AUTOMATION_GUIDE.md  WORKFLOW_MIGRATION.md  codegen.yml  docker-compose.yml  implementeringsplan-etikett-designer.md  kravspsifikasjon.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
.claude/: settings.json
.claude/agents/: frontend-ux-optimizer.md
.claude/commands/: ivar:code-review-backend.md  ivar:code-review-frontend.md
.github/workflows/: claude-code-review.yml  claude.yml  test.yml
app/api/: health.py
app/core/: config.py  migrations.py
app/graphql/: schema.py
app/models/: __init__.py  ansatte.py  customer_access_token.py  label_template.py  meny.py  menygruppe.py  ordrer.py
app/schemas/: bruker.py  label_template.py  menygruppe.py
app/services/: ai_report_service.py  documentation_chat_service.py  email_service.py  label_generator.py  label_template_service.py  matinfo_sync.py  ngdata_sync.py  nutrition_calculator.py  pdfme_generator.py  report_service.py  vetduat_sync.py  zpl_label_generator.py
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.production  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
backend/.claude/: settings.json
backend/app/: __init__.py  celery_app.py  main.py
backend/data/: Varebok Larvik kommunale catering.csv  kundedata.xml
backend/docs/: API_DOCUMENTATION.md  MENU_SYSTEM_DESIGN.md  PLAN-etikett-designer.md  code-review-backend-rapport.md  name_mappings.md
backend/scripts/: README.md  anonymize_customers.py  check_kundegruppe3.py  check_menu_tables.py  check_migrations.py  check_schema.py  complete_migration.py  create_admin_user.py  create_user_tables.py  database_schema_analyzer.py  fix_gtin_codes.py  generate_models_from_schema.py  get_all_columns.py  get_all_table_schemas.py  get_exact_tables.py  get_recipe_tables.py  get_schemas_simple.py  import_kundedata.py  migrate_templates.py  run_migrations.py  run_test_server.sh  start-celery-beat.sh  start-celery-worker.sh  start-flower.sh  test_menu_system.py  test_products_query.py
backend/tests/: README.md  conftest.py  seed_data.py  seed_test_data.py  test_app_startup.py  test_gtin_update.py  test_label_templates.py  test_matinfo_api.py  test_matinfo_tracker.py  (+4 more)
docs/: BRUKERMANUAL.md  DATABASE_TABELL_ANALYSE.md  FEEDBACK_IMPLEMENTATION.md  FEEDBACK_SYSTEM.md  NOTE-TO-SELF.md  NUTRITION_STATUS.md  RAPPORT_GUIDE.md  RAPPORT_QUICK_START.md  RAPPORT_WYSIWYG_ALTERNATIVER.md  SYSTEMFLYT.md  code-review-frontend-rapport.md  openapi.yaml  production-system-plan.md  workflow-automation-architecture.md  workflow-automation-infrastructure-audit.md
frontend/: .eslintrc.json  .gitignore  DOCUMENTATION_SETUP.md  Dockerfile  Dockerfile.prod  PLAN.md  README.md  fix-all-apis.js  fix-api-endpoints.js  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  repository-checkin-analysis.md
nginx/: nginx.conf
scripts/: check_stats.py  cleanup_duplicate_gtins.py  run.sh  start-dev.sh  start.sh  sync_matinfo_products.py
src/: auth.ts  middleware.ts
tests/: test_async_gtin_collection.py  test_gtin_collection.py  test_gtin_fetch.py  test_kalkyle_nutrition.py  test_large_fetch.py  test_product_sync.py
workflow/: .dockerignore  Dockerfile  README.md  docker-compose.workflow.yml  pyproject.toml
workflow/app/: __init__.py  celery_app.py
workflow/app/core/: config.py
workflow/app/services/: execution_engine.py
workflow/app/tasks/: __init__.py  workflow_tasks.py
workflow/scripts/: start-beat.sh  start-flower.sh  start-worker.sh
(+712 files in other folders)
