[project]
name = "catering-workflow"
version = "2.8.1"
description = "Workflow Automation Service for Catering System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Celery and task processing
    "celery==5.3.4",
    "redis[hiredis]==5.0.1",

    # Database (shared with backend)
    "asyncpg==0.29.0",
    "sqlalchemy==2.0.23",
    "greenlet==3.0.3",

    # Email
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",

    # Configuration
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "flower>=2.0.0",  # Celery monitoring
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
